# Zotero2Readwise

./: pyproject.toml
.github/workflows/: ci.yaml
zotero2readwise/: helper.py  readwise.py  run.py  zotero.py  zt2rw.py
