[project]
name = "zotero2readwise"
version = "1.0.0"
description = "Export your Zotero annotations and notes to Readwise"
authors = [{ name = "ealizadeh", email = "hello@ealizadeh.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = [
    "Zotero",
    "Readwise",
]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "pyzotero>=1.4.26,<2",
    "requests>=2.26.0,<3",
]

[project.urls]
Homepage = "https://github.com/e-alizadeh/Zotero2Readwise"
Repository = "https://github.com/e-alizadeh/Zotero2Readwise"
Documentation = "https://github.com/e-alizadeh/Zotero2Readwise"

[dependency-groups]
dev = [
    "ipython>=7.32.0,<8",
    "pre-commit>=2.16.0,<3",
    "ipdb>=0.13.9,<0.14",
]

[tool.semantic_release]
version_variables = [
    "zotero2readwise/__init__.py:__version__",
    "pyproject.toml:version"
]

[tool.semantic_release.remote.token]
env = "GH_TOKEN" # default env name containing the GitHub Token 

[tool.hatch.build.targets.sdist]
include = ["zotero2readwise"]

[tool.hatch.build.targets.wheel]
include = ["zotero2readwise"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["zotero2readwise"]

[tool.ruff.pydocstyle]
convention="google"
